add the contact us layout

--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/static/style.css">
   <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
@@ -16,20 +18,72 @@
             <a class="nav-link" style="font-size: larger;" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" style="font-size: larger;" href="/about">About Us</a>
+            <a class="nav-link" style="font-size: larger;" href="/about">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="font-size: larger;" href="/contact">Contact Us</a>
+            <a class="nav-link active" style="font-size: larger;" href="/contact">Contact Us</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
   
-    <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
+    <div class="card-rounded" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-        <img class="card-img-top" src="/static/cars.jpeg" alt="contactus image">
-        <img class="card-img-top" src="/static/contactus.png" alt="contactus image">
+        <div class="container">
+          <div class="container w-75">
+              <img class="card-img-top p-5" src="/static/cars.jpeg" alt="contactus image">
+          </div>
+          <hr />
+          <div class="row">
+            <div class="col-6 border-dark border-end border-3">
+              <div class="w-50 mx-auto d-block mt-5">
+                <img class="card-img-top" src="/static/contactus.png" alt="contactus image">
+              </div>
+            </div>
+            <div class="col-6">
+                <table class="table">
+                    <tbody>
+                      <tr>
+                        <td class="text-primary fw-bold">Contact Customer Service:</td>
+                      </tr>
+                      <tr>
+                        <td class="text-info text-end">support@yinxuanh.bestcars.com</td>
+                      </tr>
+
+                      <tr>
+                        <td class="text-primary fw-bold">Contact our National Advertising team:</td>
+                      </tr>
+                      <tr>
+                        <td class="text-info text-end">NationalSales@yinxuanh.bestcars.com</td>
+                      </tr>
+
+                      <tr>
+                        <td class="text-primary fw-bold">Contact our Public Relations team:</td>
+                      </tr>
+                      <tr>
+                        <td class="text-info text-end">PR@yinxuanh.bestcars.com</td>
+                      </tr>
+
+                      <tr>
+                        <td class="text-primary fw-bold">Contact the yinxuanh.bestcars.com offices:</td>
+                      </tr>
+                      <tr>
+                        <td class="text-info text-end">0800-0806-449</td>
+                      </tr>
+
+                      <tr>
+                        <td class="text-primary fw-bold">Become a yinxuanh.bestcars.com car dealer:</td>
+                      </tr>
+                      <tr>
+                        <td class="text-info text-end">Visit yinxuanh.growwithbestcars.com</td>
+                      </tr>
+
+                    </tbody>
+                  </table>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     
